--- a/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-@*<<<<<<< HEAD
-*@    <title>@ViewBag.Title - ElectroDev</title>
+    <title>@ViewBag.Title - ElectroDev</title>
      <!-- Core Style CSS -->
     <link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
@@ -13,10 +12,7 @@
    <style>
     .logo{font-size: 3rem;}
    </style>
-   @RenderBody()
-  
-=======
-    <title>@ViewData["Title"] - testproject</title>
+   <title>@ViewData["Title"] - testproject</title>
     <!-- Core Style CSS -->
     <link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
@@ -28,10 +24,6 @@
     </style>
 </head>
 <body>
-  
-
-
-
     <!-- Dashboard -->
     <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary">
         <!-- Vertical Navbar -->
@@ -53,45 +45,14 @@
                 <div class="collapse navbar-collapse" id="sidebarCollapse">
                     <!-- Navigation -->
                     <ul class="navbar-nav">
-                        <li class="nav-item"> <a class="nav-link" href="#"> <i class="bi bi-house"></i> Dashboard </a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#"> <i class="bi bi-bar-chart"></i> Add Category </a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#"> <i class="bi bi-chat"></i> Add Product <span class="badge bg-soft-primary text-primary rounded-pill d-inline-flex align-items-center ms-auto">6</span> </a> </li>
-                        <li class="nav-item"> <a class="nav-link" href="#"> <i class="bi bi-bookmarks"></i> Collections </a> </li>
+                        <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Category"> <i class="bi bi-house"></i> Categories </a> </li>
+                        <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Brand"> <i class="bi bi-bar-chart"></i> Brands </a> </li>
+                        <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Product"> <i class="bi bi-chat"></i> Products </a> </li>
+                        <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Order"> <i class="bi bi-bookmarks"></i> Orders </a> </li>
                         <li class="nav-item"> <a class="nav-link" asp-action="SignUp" asp-controller="User"> <i class="bi bi-people"></i> Users </a> </li>
                     </ul> <!-- Divider -->
                     <hr class="navbar-divider my-5 opacity-20"> <!-- Navigation -->
-                    <ul class="navbar-nav mb-md-4">
-                        <li>
-                            <div class="nav-link text-xs font-semibold text-uppercase text-muted ls-wide" href="#"> Contacts <span class="badge bg-soft-primary text-primary rounded-pill d-inline-flex align-items-center ms-4">13</span> </div>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link d-flex align-items-center">
-                                <div class="me-4">
-                                    <div class="position-relative d-inline-block text-white"> <img alt="Image Placeholder" src="https://images.unsplash.com/photo-1548142813-c348350df52b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80" class="avatar rounded-circle"> <span class="position-absolute bottom-2 end-2 transform translate-x-1/2 translate-y-1/2 border-2 border-solid border-current w-3 h-3 bg-success rounded-circle"></span> </div>
-                                </div>
-                                <div> <span class="d-block text-sm font-semibold"> Marie Claire </span> <span class="d-block text-xs text-muted font-regular"> Paris, FR </span> </div>
-                                <div class="ms-auto"> <i class="bi bi-chat"></i> </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link d-flex align-items-center">
-                                <div class="me-4">
-                                    <div class="position-relative d-inline-block text-white"> <span class="avatar bg-soft-warning text-warning rounded-circle">JW</span> <span class="position-absolute bottom-2 end-2 transform translate-x-1/2 translate-y-1/2 border-2 border-solid border-current w-3 h-3 bg-success rounded-circle"></span> </div>
-                                </div>
-                                <div> <span class="d-block text-sm font-semibold"> Michael Jordan </span> <span class="d-block text-xs text-muted font-regular"> Bucharest, RO </span> </div>
-                                <div class="ms-auto"> <i class="bi bi-chat"></i> </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link d-flex align-items-center">
-                                <div class="me-4">
-                                    <div class="position-relative d-inline-block text-white"> <img alt="..." src="https://images.unsplash.com/photo-1610899922902-c471ae684eff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80" class="avatar rounded-circle"> <span class="position-absolute bottom-2 end-2 transform translate-x-1/2 translate-y-1/2 border-2 border-solid border-current w-3 h-3 bg-danger rounded-circle"></span> </div>
-                                </div>
-                                <div> <span class="d-block text-sm font-semibold"> Heather Wright </span> <span class="d-block text-xs text-muted font-regular"> London, UK </span> </div>
-                                <div class="ms-auto"> <i class="bi bi-chat"></i> </div>
-                            </a>
-                        </li>
-                    </ul> <!-- Push content down -->
+                    <!-- Push content down -->
                     <div class="mt-auto"></div> <!-- User (md) -->
                     <ul class="navbar-nav">
                         <li class="nav-item"> <a class="nav-link" href="#"> <i class="bi bi-person-square"></i> Account </a> </li>
@@ -99,7 +60,6 @@
                     </ul>
                 </div>
             </div>
-
         </nav>
     <div class="container">
         <main role="main" class="pb-3">
@@ -120,6 +80,5 @@
 	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 	<script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
->>>>>>> Mariam
 </body>
 </html>
