--- a/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Brand"> <i class="bi bi-bar-chart"></i> Brands </a> </li>
                         <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Product"> <i class="bi bi-chat"></i> Products </a> </li>
                         <li class="nav-item"> <a class="nav-link" asp-action="Index" asp-controller="Order"> <i class="bi bi-bookmarks"></i> Orders </a> </li>
-                        <li class="nav-item"> <a class="nav-link" asp-action="SignUp" asp-controller="User"> <i class="bi bi-people"></i> Users </a> </li>
+                        <li class="nav-item"> <a class="nav-link" asp-action="Control" asp-controller="User"> <i class="bi bi-people"></i> Users </a> </li>
                     </ul> <!-- Divider -->
                     <hr class="navbar-divider my-5 opacity-20"> <!-- Navigation -->
                     <!-- Push content down -->
