--- a/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
@@ -1,11 +1,18 @@
 ﻿@model LoginModel
-<h1>Login Page</h1>
+<br />
+<br />
+<br />
+<br />
 
 <form method="post" asp-action="SignIn" asp-controller="User">
     <div asp-validation-summary="ModelOnly"></div>
     <div class="form-group">
         <label asp-for="UserName"></label>
-        <input asp-for="UserName" class="form-control" />
+        
+            <select asp-for="UserName" class="form-control" asp-items="@ViewBag.UserName">
+                <option></option>
+            </select>
+        
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
