Modify in Category Controller

--- a/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
@@ -24,7 +24,7 @@
                     </div>
                     <input type="submit" value="Add" class="btn btn-primary" />
                     <div class="d-flex justify-content-center">
-                        <img class="img-thumbnail" id="loader" src="~/Images/uploadloader.gif" style="display:none;" />
+                        <img class="w-20" id="loader" src="~/Images/uploadloader.gif" style="display:none;" />
                     </div>
                 </form>
             </div>      
