--- a/ITI.ElectroDev.Presentation/Views/Category/Edit.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Edit.cshtml
@@ -16,9 +16,9 @@
             <div class="row">
                 <form data-ajax="true" data-ajax-loading="#loader" data-ajax-complete="CategoryAdd" method="GET" action="/Category/SaveEdit">
                     <div asp-validation-summary="ModelOnly"></div>
-                    <div class="form-group">
-                        <label>CategoryID</label>
-                        <input name="Id" value="@Model.Id" class="form-control" readonly />
+                    <div class="form-group" hidden>
+                        <label >CategoryID</label>
+                        <input name="Id" value="@Model.Id" class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label>Name</label>
@@ -26,7 +26,7 @@
                     </div>
                     <input class="col-1 btn  col-1 btn btn-primary" type="submit" value="Edit">
                     <div class="d-flex justify-content-center">
-                        <img class="img-thumbnail" id="loader" src="~/Images/uploadloader.gif" style="display:none;" />
+                        <img class="w-20" id="loader" src="~/Images/uploadloader.gif" style="display:none;" />
                     </div>
                 </form>
             </div>
