--- a/ITI.ElectroDev.Presentation/Views/Category/_PagedCategories.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/_PagedCategories.cshtml
@@ -7,10 +7,10 @@
     @model IPagedList<Category>
 
     <div class="table-responsive">
-        <table class="table table-hover table-nowrap">
+        <table class="table table-hover table-nowrap text-center">
             <thead class="thead-light">
                 <tr>
-                    <th scope="col">ID Category</th>
+                    @*<th scope="col">ID Category</th>*@
                     <th scope="col">Name</th>
                     <th></th>
                 </tr>
@@ -19,14 +19,23 @@
                 @foreach (var b in Model.ToList<Category>())
                 {
                     <tr>
-                        <td><span class="h3 font-bold mb-0">@b.Id</span></td>
+                       @* <td><span class="h3 font-bold mb-0">@b.Id</span></td>*@
                         <td><span class="h3 font-bold mb-0">@b.Name</span></td>
                         <td class="text-end">
                             <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Category" asp-action="Edit" asp-route-id="@b.Id" asp-route-Name="@b.Name">
                                 <span class="h3 font-bold pe-2"> <i class="bi bi-pencil h3 font-bold"></i> </span>
                                 <span class="h3 font-bold">Edit</span>
                             </a>
-                            <a class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold " asp-controller="Category" asp-action="ConfirmDelete" asp-route-id="@b.Id" asp-route-Name="@b.Name"> <i class="bi bi-trash h3 font-bold text-white"></i></a>
+                          @*  <a class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold " asp-controller="Category" asp-action="ConfirmDelete" asp-route-id="@b.Id" asp-route-Name="@b.Name"> <i class="bi bi-trash h3 font-bold text-white"></i></a>
+                            @Html.ActionLink("Delete", "Delete", new { id = @b.Id }
+                            ,new { @class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold"
+                            ,onclick="return confirm('Are you sure?');"})*@
+
+                            <a href="~/Category/Delete?id=@b.Id" id="deleteBtn" class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold" onclick="return confirm('Are you sure you want to delete : @b.Name');">
+                                <i class="bi bi-trash h3 font-bold text-white"></i>
+                                </a>
+
+                           
                         </td>
                     </tr>
 
@@ -35,7 +44,6 @@
             </tbody>
         </table>
     </div>
-
 
     <div class="d-flex justify-content-center">
         @Html.PagedListPager(Model, pageIndex => Url.Action("PartialCategory", new { pageIndex}),
