--- a/ITI.ElectroDev.Presentation/Views/User/SignUp.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignUp.cshtml
@@ -33,7 +33,12 @@
         <input asp-for ="ConfirmPassword" class="form-control"/>
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
-   
+   <div>
+       <label asp-for="Role">Choose a Role</label>
+       <select asp-for="Role" asp-items="ViewBag.Roles">
+           <option></option>
+       </select>
+   </div>
     <input type="submit" value="Register" class="btn btn-primary" style="margin:10px"/>
  <div class="m-t-25 m-b--5 align-center">
  <a asp-controller="User" asp-action="SignIn">You already have a membership?</a>
