--- a/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
@@ -1,4 +1,5 @@
 ﻿@model LoginModel
+
 <h3 style="text-align:center;color:black; margin:10px;">Login Page For Admin</h3>
 
 <br />
@@ -27,5 +28,7 @@
         <input asp-for="RememberMe" />
         <span asp-validation-for="RememberMe"></span>
     </div>
+    <input type="hidden" asp-for="ReturnUrl"/>
     <input class="btn btn-primary" value="Sign In" type="submit" />
 </form>
+
