--- a/ITI.ElectroDev.Presentation/Views/User/UsersDetails.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/UsersDetails.cshtml
@@ -1,18 +1,35 @@
-﻿@model  List<User> 
-<h3 style="text-align:center;color:black; margin-top:10px;">All Users In The Dashboard</h3>
+﻿@model List<User>
+
+<h3 style="text-align:center;color:black; margin-top:10px;">All Users Dtails In The Dashboard</h3>
 <br />
 <br />
 <br />
 
-    @foreach(var u in Model)
-    {
-        <ul>
-          <h4>@u.UserName</h4>
-          <br>
-         <li>First Name: @u.FirstName</li>
-        <li>Last Name: @u.LastName</li>
-        <li>Email: @u.Email</li>
 
-    </ul>
-    <hr / style="border-top: 1px solid red;">
-    }
+
+<table class="table">
+  <thead>
+    <tr>
+            <td scope="col" class="table-dark">User Name</td>
+            <td scope="col" class="table-dark">First Name</td>
+            <td scope="col" class="table-dark">Last Name</td>
+            <td scope="col" class="table-dark">Email</td>
+
+    </tr>
+  </thead>
+  <tbody>
+      @foreach(var u in Model){
+    <tr>
+     
+                <td class="table-primary">@u.UserName</td>
+                <td class="table-info">@u.FirstName</td>
+                <td class="table-secondary">@u.LastName</td>
+            <td class="table-success">@u.Email</td>
+
+    </tr>
+      }
+  </tbody>
+</table>
+
+
+
