--- a/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
@@ -16,11 +16,11 @@
         <div class="card-body">
             <div class="row">
                 <form data-ajax="true" data-ajax-loading="#loader" data-ajax-complete="CategoryAdd" method="post" asp-controller="Category" asp-action="Add" enctype="multipart/form-data">
-                    <div asp-validation-summary="ModelOnly"></div>
+                    @*<div asp-validation-summary="ModelOnly"></div>*@
                     <div class="form-group">
                         <label asp-for="Name"></label>
                         <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="validation"></span>
+                        <span asp-validation-for="Name"></span>
                     </div>
                     <input type="submit" value="Add" class="btn btn-primary" />
                     <div class="d-flex justify-content-center">
