--- a/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         <!-- Vertical Navbar -->
         <nav class="navbar show navbar-vertical h-lg-screen navbar-expand-lg px-0 py-3   navbar-dark shadow-5-strong  border-bottom border-bottom-lg-0 border-end-lg" id="navbarVertical">
             <div class="container-fluid">
-                <!-- Toggler --> <button class="navbar-toggler ms-n2" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <!-- Brand --> <a class="navbar-brand py-lg-2 mb-lg-5 px-lg-3 me-0 logo" href="#"> ElectroDev </a> <!-- User menu (mobile) -->
+                <!-- Toggler --> <button class="navbar-toggler ms-n2" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <!-- Brand --> <a class="navbar-brand logo" href="#"> ElectroDev </a> <!-- User menu (mobile) -->
                 <div class="navbar-user d-lg-none">
                     <!-- Dropdown -->
                     <div class="dropdown">
