--- a/ITI.ElectroDev.Presentation/Views/Brand/AllBrand.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Brand/AllBrand.cshtml
@@ -1,17 +1,24 @@
 ﻿@using ITI.ElectroDev.Models
 @model List<Brand>
+<header>
+     <h7>All Brands</h7>
+ </header>
 <link rel="stylesheet" href="~/css/AllBrand.css" asp-append-version="true" />
+<form method="get" asp-action="Search" asp-controller="Product">
+    <div class="input-group">
+        <input class="form-control" type="search" name="ProductName" />
+        <button class=" btn btn-outline-success my2-sm-0" type="submit">Search</button>
+
+    </div>
+
+</form>
 <!--For Page-->
 <!--For Row containing all card-->
- <header>
-     <h5>All Brands</h5>
- </header>
+ 
 
 <div class="card shadow border-0 mb-7">
-    @foreach (var item in Model)
-        {
-    <div class="col-lg-4 col-md-8 col-md-12 ">
-        <div class="card card-cascade card-ecommerce wider shadow mb-8 ">
+   
+    
 
                 <title>@ViewData["Title"] - testproject</title>
                 <!-- Core Style CSS -->
@@ -26,88 +33,73 @@
 
 
 
-                <table>
+                <table class="table">
+
+                    <tr>
+                       @* <th>
+                            @Html.DisplayNameFor(model => model.Name)
+                        </th>*@
+                    </tr>
+                     @foreach (var item in Model)
+                    {
+                          <tr>
+ 
+            <td>
+                <strong>
+                    <h5>
+                @Html.DisplayFor(modelItem => item.Name)
+                </h5>
+                    </strong>
+            </td>
          
-            <!--Card Body-->
-                    <div class="card shadow border-0 mb-12">
+            <td>
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id },
+            new { onclick = "return confirm('Are sure wants to delete?');" })
                   
-                <td>
-                <!--Card Title-->
-                <h4 class="card-title">
-                    <strong>
-                        @item.Name
-                </strong>
-            </h4>
-                    </td>
+            </td>
+            <td>
+                    <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-action="Edite" asp-controller="Brand" asp-route-Name="@item.Name">
+                    <span class="h5 font-bold pe-2"> <i class="bi bi-pencil h5 font-bold"></i> </span>
+                    <span class="h5 font-bold">Edit</span>
+                </a>
+                </td>
+            </tr>
+        }
                 </table>
           
-                <div class="d-sm-flex align-items-sm-start">
+               @* <div class="d-sm-flex align-items-sm-start">
                     <a   class="btn btn-danger js-delete bi bi-trash" asp-controller="Brand" asp-action="ConfirmDelete" asp-route-id="@item.Id" asp-route-Name="@item.Name">Delete</a>
                 <div class="col-lg-4">
                   
                         <a class="btn btn-primary text-uppercase" asp-action="Edite" asp-controller="Brand" asp-route-id="@item.Id">Edite</a>
-                       @* <a href="javascript:;" class="btn btn-danger js-delete" data-id="@item.Id">*@
-                        @*</a>*@
+                       
+                      
                     </div>
 
-                </div>
-            </div>
+                </div>*@
+
+                
+
+   
+               
+          
             <hr />
+@*            @Html.ActionLink("Delete", "ConfirmDelete", new { id = item.Id })*@
                   
             <!--Card footer-->
-         
-
-
-
-        </div>
+    
  
  
-        }
+ 
+       
  </div>
 
-@*@section Scripts{
-    <script type="text/javascript"> $(document).ready(function () {
-            $('.js-delete').on('click', function () {
-                var btn = $(this);
 
-                bootbox.confirm({
-                    message: "Are you sure that you need to delete this movie?",
-                    buttons: {
-                        confirm: {
-                            label: 'Yes',
-                            className: 'btn-danger'
-                        },
-                        cancel: {
-                            label: 'No',
-                            className: 'btn-outline-secondary'
-                        }
-                    },
-                    callback: function (result) {
-                        if (result) {
-                            $.ajax({
-                                url: '/brand/delete/' + btn.data('id'),
-                                success: function () {
-                                    var movieContainer = btn.parents('.order ');
-                                    movieContainer.addClass('animate__animated animate__zoomOut');
-
-                                    setTimeout(function () {
-                                        movieContainer.remove();
-                                    }, 1000);
-
-                                    toastr.success('Movies deleted');
-                                },
-                                error: function () {
-                                    toastr.error('Something went wrong!');
-                                }
-                            });
-                        }
-                    }
-                });
-            });
-        });</script>
-        }*@
+ 
 <div style="margin-top:100px;">
     <a class="btn btn-primary" asp-controller="Brand" asp-action="AddNewBrand">Add New Brand</a>
 </div>
 
 
+© 2022 ITI Sohag, 
+All Brands Show 
