--- a/ITI.ElectroDev.Presentation/Views/Brand/Edite.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Brand/Edite.cshtml
@@ -16,10 +16,10 @@
                 <form data-ajax="true" data-ajax-loading="#loader" data-ajax-complete="BrandUpdated" method="GET" action="/Brand/ConfirmEdite">
                     <div asp-validation-summary="ModelOnly"></div>
 
-                     <div class="form-group">
+                  @*   <div class="form-group">
                         <label>ID</label>
                           <input name="Id" value="@Model.Id" class="form-control" readonly />
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         <label>Name</label>
