Authintication and authorization but i left signup get without role so you can sign up account with role

--- a/ITI.ElectroDev.Presentation/Views/User/Control.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/Control.cshtml
@@ -18,8 +18,10 @@
     <li> <a asp-action="SignUpCustomer" asp-controller="User"> <i class="bi bi-person-plus-fill"></i> To Add a Customer </a> </li>
     <li> <a asp-action="Add" asp-controller="Role"><i class="bi bi-person-plus-fill"></i> To Add Role </a> </li>
 
-    <li> <a asp-action="UsersDetails" asp-controller="User"> <i class="bi bi-info-circle"></i> To All Users Details </a> </li>
+    <li> <a asp-action="UsersDetails" asp-controller="User"> <i class="bi bi-pencil-square"></i> To Update User</a> </li>
+    <li> <a asp-action="UsersDetails" asp-controller="User">     <i class="bi bi-person-dash-fill"></i> To Delete a User</a> </li>
 
+    <li> <a asp-action="UsersDetails" asp-controller="User"> <i class="bi bi-info-circle-fill"></i> To All Users Details </a> </li>
 
 </ul>
 
