--- a/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
@@ -1,12 +1,67 @@
 ﻿@model LoginModel
+@{
+    Layout = "";
+    
+}
+<style>
+    body {
+        background-color:aqua;
 
-<h3 style="text-align:center;color:black; margin:10px;">Login Page For Admin</h3>
+    }
+
+    input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+     input[type=password]{
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    input[type=submit] {
+        width: 100%;
+        background-color: dimgrey;
+        color: white;
+        padding: 14px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+
+    }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+    div {
+        
+        border-radius: 5px;
+        background-color: aqua;
+        padding: 20px;
+    }
+</style>
+
+<h3 style="text-align:center;color:black; margin:10px;">Welcome to Login Page</h3>
 
 <br />
 <br />
 <br />
 <br />
-
+@if (TempData["AlertMessage"] != null)
+{
+    <div class="alert alert-success">
+        <strong>Success !</strong>@TempData["AlertMessage"]
+    </div>
+}
 <form method="post" asp-action="SignIn" asp-controller="User">
     <div asp-validation-summary="ModelOnly"></div>
     <div class="form-group">
@@ -31,4 +86,7 @@
     <input type="hidden" asp-for="ReturnUrl"/>
     <input class="btn btn-primary" value="Sign In" type="submit" />
 </form>
+   
+
+
 
