--- a/ITI.ElectroDev.Presentation/Views/User/SignUp.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignUp.cshtml
@@ -40,7 +40,7 @@
        </select>
    </div>
     <input type="submit" value="Register" class="btn btn-primary" style="margin:10px"/>
- <div class="m-t-25 m-b--5 align-center">
+ @*<div class="m-t-25 m-b--5 align-center">
  <a asp-controller="User" asp-action="SignIn">You already have a membership?</a>
-   </div>
+   </div>*@
 </form>
