--- a/ITI.ElectroDev.Presentation/Views/User/SignUpCustomer.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignUpCustomer.cshtml
@@ -35,7 +35,7 @@
     </div>
    
     <input type="submit" value="Register" class="btn btn-primary" style="margin:10px" />
-    <div class="m-t-25 m-b--5 align-center">
+   @* <div class="m-t-25 m-b--5 align-center">
         <a asp-controller="User" asp-action="SignIn">You already have a membership?</a>
-    </div>
+    </div>*@
 </form>
