--- a/ITI.ElectroDev.Presentation/Views/User/UsersDetails.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/UsersDetails.cshtml
@@ -5,7 +5,12 @@
 <br />
 <br />
 
-
+@if (TempData["AlertMessage"]!=null)
+{
+    <div class="alert alert-success">
+    <strong>Success !</strong>@TempData["AlertMessage"]
+</div>
+}
 
 <table class="table">
   <thead>
@@ -14,22 +19,39 @@
             <td scope="col" class="table-dark">First Name</td>
             <td scope="col" class="table-dark">Last Name</td>
             <td scope="col" class="table-dark">Email</td>
+            <td scope="col" class="table-dark">Edit</td>
+            <td scope="col" class="table-dark">Delete</td>
 
     </tr>
   </thead>
   <tbody>
       @foreach(var u in Model){
-    <tr>
-     
-                <td class="table-primary">@u.UserName</td>
-                <td class="table-info">@u.FirstName</td>
-                <td class="table-secondary">@u.LastName</td>
-            <td class="table-success">@u.Email</td>
+    <tr id="i">
 
+                <td class="table-secondary">@u.UserName</td>
+                <td class="table-secondary">@u.FirstName</td>
+                <td class="table-secondary">@u.LastName</td>
+                <td class="table-secondary">@u.Email</td>
+
+                @if (User.IsInRole("Editor") || User.IsInRole("Admin"))
+                {
+                    <td class="table-secondary"><a class="btn btn-info" asp-controller="User" asp-action="Edit">Edit</a></td>
+                    <td class="table-secondary"><a class="btn btn-danger" asp-controller="User" asp-action="Delete" asp-route-id="@u.Id" onclick="return confirm('Are you sure you want to delete this user: @u.UserName')">Delete</a></td>
+
+                }else{
+                    <td class="table-secondary"><button class="btn btn-info" disabled asp-controller="User" asp-action="Edit">Edit</button></td>
+                    <td class="table-secondary"><button class="btn btn-danger" disabled asp-controller="User" asp-action="Delete" asp-route-id="@u.Id" onclick="return confirm('Are you sure you want to delete this user: @u.UserName')">Delete</button></td>
+
+                }
+               
+                
     </tr>
       }
+
+     
   </tbody>
 </table>
+
 
 
 
