--- a/ITI.ElectroDev.Presentation/Views/User/UsersDetails.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/UsersDetails.cshtml
@@ -35,11 +35,11 @@
 
                 @if (User.IsInRole("Editor") || User.IsInRole("Admin"))
                 {
-                    <td class="table-secondary"><a class="btn btn-info" asp-controller="User" asp-action="Edit">Edit</a></td>
+                    <td class="table-secondary"><a class="btn btn-info" asp-controller="User" asp-action="Edit" asp-route-id="@u.Id">Edit</a></td>
                     <td class="table-secondary"><a class="btn btn-danger" asp-controller="User" asp-action="Delete" asp-route-id="@u.Id" onclick="return confirm('Are you sure you want to delete this user: @u.UserName')">Delete</a></td>
 
                 }else{
-                    <td class="table-secondary"><button class="btn btn-info" disabled asp-controller="User" asp-action="Edit">Edit</button></td>
+                    <td class="table-secondary"><button class="btn btn-info" disabled asp-controller="User" asp-route-id="@u.Id" asp-action="Edit">Edit</button></td>
                     <td class="table-secondary"><button class="btn btn-danger" disabled asp-controller="User" asp-action="Delete" asp-route-id="@u.Id" onclick="return confirm('Are you sure you want to delete this user: @u.UserName')">Delete</button></td>
 
                 }
