change design dashboard

--- a/ITI.ElectroDev.Presentation/Views/Category/Index.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@using ITI.ElectroDev.Models
-@using X.PagedList
-@model IPagedList<Category>
+﻿
+@model List<Category>
 
 <header class="bg-surface-primary border-bottom pt-6">
     <div class="container-fluid">
