--- a/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Category/Add.cshtml
@@ -3,7 +3,7 @@
 <h2>@localizer["Add New Category"]</h2>
 
 <a asp-controller="Category" asp-action="Index">
-    <i class="bi bi-arrow-left " style="font-size:2rem"></i>
+    <i class="fa fa-arrow-left " style="font-size:2rem"></i>
 </a>
 <div class="alert alert-success" role="alert" style="display:none;" id="Mgs">
     <h4 class="alert-heading">@localizer["Well done"]</h4>
@@ -15,12 +15,12 @@
     <div class="card shadow border-0">
         <div class="card-body">
             <div class="row">
-                <form data-ajax="true" data-ajax-loading="#loader" data-ajax-complete="CategoryAdd" method="post" asp-controller="Category" asp-action="Add" enctype="multipart/form-data">
-                    @*<div asp-validation-summary="ModelOnly"></div>*@
+                <form method="post" asp-controller="Category" asp-action="Add" enctype="multipart/form-data">
+                   @* <div asp-validation-summary="ModelOnly"></div>*@
                     <div class="form-group">
                         <label asp-for="Name"></label>
                         <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name"></span>
+                        <span asp-validation-for="Name" style="color:red"></span>
                     </div>
                     <input type="submit" value="@localizer["Add"]" class="btn btn-primary" />
                     <div class="d-flex justify-content-center">
@@ -31,8 +31,6 @@
         </div>
     </div>
 </div>
-
-
 <script>
     function CategoryAdd(data) {
         document.getElementById("Mgs")
