--- a/ITI.ElectroDev.Presentation/Views/Shared/_SelectLanguage.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Shared/_SelectLanguage.cshtml
@@ -15,7 +15,7 @@
     var returnUrl = string.IsNullOrEmpty(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}";
 }
 
-<div class="col-3">
+<div>
     <form method="post" asp-controller="Home" asp-action="SetLanguage" asp-route-returnUrl="@returnUrl">
         <select class="form-select" name="culture"
                 asp-for="@requestCulture.RequestCulture.UICulture.Name"
