Solve Conflicts after Merging Mariam

--- a/ITI.ElectroDev.Presentation/wwwroot/Content/css/style.css
+++ b/ITI.ElectroDev.Presentation/wwwroot/Content/css/style.css
@@ -2988,7 +2988,7 @@ div#graph1, div#graph4, div#graph5, div#graph6, div#graph7, div#graph8, div#grap
     padding: 1em;
 }
 .w3ls_head {
-    margin-bottom: 0.5em;;
+    margin-bottom: 0.5em;
 }
 .table td, .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
     padding: 3px!important;
