--- a/ITI.ElectroDev.Presentation/Views/Brand/AddNewBrand.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Brand/AddNewBrand.cshtml
@@ -16,9 +16,9 @@
 
     <div>
         <div class="form-group">
-            <label asp-for="Cat_Id"></label>
-            <input asp-for="Cat_Id" name="Cat_Id" class="form-control" />
-            <span asp-validation-for="Cat_Id" class="validation"></span>
+            <label asp-for="CategoryId"></label>
+            <input asp-for="CategoryId" name="Cat_Id" class="form-control" />
+            <span asp-validation-for="CategoryId" class="validation"></span>
         </div>
     </div>
 
