I want to switch to main so i commit

--- a/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
@@ -1,19 +1,19 @@
 ﻿@model LoginModel
 @{
     Layout = "";
-    
+     
 }
 <style>
     body {
-        background-color:aqua;
+        background-color:brown;
 
     }
 
     input[type=text], select {
         width: 100%;
         padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
+/*        margin: 8px 0;
+*/        display: inline-block;
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
@@ -21,36 +21,44 @@
      input[type=password]{
         width: 100%;
         padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
+/*        margin: 8px 0;
+*/        display: inline-block;
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
     }
     input[type=submit] {
-        width: 100%;
+        width: 50%;
         background-color: dimgrey;
         color: white;
         padding: 14px 20px;
         border: none;
         border-radius: 4px;
         cursor: pointer;
-
+        margin-left: 270px;
     }
 
         input[type=submit]:hover {
             background-color: #45a049;
         }
 
-    div {
-        
+    div ,form{
+        width:50%;
         border-radius: 5px;
-        background-color: aqua;
+        background-color: brown;
         padding: 20px;
+        align-content:center;
+        margin-left:250px;
+
     }
+    label{
+        color:white;
+    }
+   
+
 </style>
 
-<h3 style="text-align:center;color:black; margin:10px;">Welcome to Login Page</h3>
+<h3 style="text-align:center;color:white; margin:10px;">Welcome to Login Page</h3>
 
 <br />
 <br />
@@ -87,6 +95,16 @@
     <input class="btn btn-primary" value="Sign In" type="submit" />
 </form>
    
+
+
+
+
+
+
+
+
+
+
 
 
 
