--- a/ITI.ElectroDev.Presentation/Views/Order/Index.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/Order/Index.cshtml
@@ -1,36 +1,55 @@
 ﻿@model List<OrderDetails>
-<h1>Orders</h1>
-<a asp-action="Add" asp-controller="Order" class="btn btn-primary">Add New Order</a>
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Order For User</th>
-            <th scope="col">Total Price</th>
-            <th scope="col">Payment Type</th>
-            <th scope="col">Status</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(OrderDetails item in Model){
-            <tr>
-                <th scope="row">1</th>
-                <td>@item.User.FirstName @item.User.LastName</td>
-                <td>@item.TotalPrice</td>
-                <td>@item.Type</td>
-                <td>@item.Status</td>
-                <td class="text-end">
-                    <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Order" asp-action="OrderInfo" asp-route-id="@item.Id">
-                        <span class="h3 font-bold">Details</span>
-                    </a>
-                        <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Order" asp-action="Edit" asp-route-id="@item.Id">
-                        <span class="h3 font-bold pe-2"> <i class="bi bi-pencil h3 font-bold"></i> </span>
-                        <span class="h3 font-bold">Edit</span>
-                    </a>
-                    <a class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold " asp-controller="Order" asp-action="Delete" asp-route-id="@item.Id"> <i class="bi bi-trash h3 font-bold text-white"></i></a>
-                </td>
-            </tr>
+<h1>@localizer["Orders"]</h1>
+<a asp-action="Add" asp-controller="Order" class="btn btn-primary">@localizer["Add New Order"]</a>
+<main class="bg-surface-primary border-bottom pt-6 mt-5">
+    <div class="container-fluid mt-5 mb-5">
+
+        @if (Model.ToList<OrderDetails>().Count != 0)
+        {
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">@localizer["Order For User"]</th>
+                        <th scope="col">@localizer["Total Price"]</th>
+                        <th scope="col">@localizer["Payment Type"]</th>
+                        <th scope="col">@localizer["Status"]</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (OrderDetails item in Model)
+                    {
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>@item.User.FirstName @item.User.LastName</td>
+                            <td>@item.TotalPrice</td>
+                            <td>@item.Type</td>
+                            <td>@item.Status</td>
+                            <td class="text-end">
+                                <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Order" asp-action="OrderInfo" asp-route-id="@item.Id">
+                                    <span class="h3 font-bold">Details</span>
+                                </a>
+                                <a class="btn d-inline-flex btn-sm btn-neutral border-base mx-1" asp-controller="Order" asp-action="Edit" asp-route-id="@item.Id">
+                                    <span class="h3 font-bold pe-2"> <i class="bi bi-pencil h3 font-bold"></i> </span>
+                                    <span class="h3 font-bold">@localizer["EditBtn"]</span>
+                                </a>
+                                <a class="btn btn-danger btn btn-sm btn-square  text-danger-hover h3 font-bold " asp-controller="Order" asp-action="Delete" asp-route-id="@item.Id"> <i class="bi bi-trash h3 font-bold text-white"></i></a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         }
-    </tbody>
-</table>
+        else
+        {
+            <div class="alert alert-danger text-center" role="alert">
+                <i class="bi bi-exclamation-triangle"></i>
+                @localizer["notOrdAdded"]
+
+            </div>
+
+        }
+
+</div>
+</main>
