--- a/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
+++ b/ITI.ElectroDev.Presentation/Views/User/SignIn.cshtml
@@ -1,7 +1,7 @@
-﻿@*@{
+﻿@{
     Layout = "";
      
-}*@
+}
 @*<style>
     body {
         background-color:brown;
@@ -115,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Visitors an Admin Panel Category Bootstrap Responsive Website Template | Login :: w3layouts</title>
+   @* <title>Visitors an Admin Panel Category Bootstrap Responsive Website Template | Login :: w3layouts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Visitors Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
@@ -133,7 +133,52 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link rel="stylesheet" href="css/font.css" type="text/css" />
     <link href="css/font-awesome.css" rel="stylesheet">
     <!-- //font-awesome icons -->
-    <script src="js/jquery2.0.3.min.js"></script>
+    <script src="js/jquery2.0.3.min.js"></script>*@
+
+
+
+    <title>ElectroDev</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="keywords" content="" />
+   
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!-- bootstrap-css -->
+    <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link href="~/Content/css/style.css" rel='stylesheet' type='text/css' />
+    <link href="~/Content/css/style-responsive.css" rel="stylesheet" />
+    <link href="~/Content/css/_Layout.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
+    <!-- font CSS -->
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <!-- font-awesome icons -->
+    <link rel="stylesheet" href="~/Content/css/font.css" type="text/css" />
+    <link href="~/Content/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/Content/css/morris.css" type="text/css" />
+    <!-- calendar -->
+    <link rel="stylesheet" href="~/Content/css/monthly.css">
+    <!-- //calendar -->
+    <!-- //font-awesome icons -->
+    @*    <link rel="stylesheet" href="~/Content/lib/twitter-bootstrap/css/bootstrap.min.css" />
+    *@
+    <script src="~/Content/js/jquery2.0.3.min.js"></script>
+    <script src="~/Content/js/raphael-min.js"></script>
+    <script src="~/Content/js/morris.js"></script>
+    @*@if (isRTL)
+    {
+        <link href="~/Content/css/StyleSheet.css" rel='stylesheet' type='text/css' />
+        <link href="~/Content/css/style-responsiv-rtl.css" rel='stylesheet' type='text/css' />
+        <link rel="stylesheet" href="https://therichpost.com/responsivestyle/index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css">
+
+    }*@
+    <script type="text/javascript">
+        function preventBack() { window.history.forward(); }
+        setTimeout("preventBack()", 0);
+        window.onunload = function () { null };
+    </script>
 </head>
 <body>
 
@@ -150,7 +195,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <form method="post" asp-action="SignIn" asp-controller="User">
                 <span asp-validation-summary="ModelOnly"></span>
         <div>
-              
+            <br />  
         <label asp-for="UserName"></label>
          <select class="s" asp-for="UserName"  asp-items="@ViewBag.UserName" >
                 <option></option>
@@ -160,7 +205,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     </div>         
               
-
+    <br />
    <div>
         <label asp-for="Password"></label>
         <input asp-for="Password" class="ggg" />
@@ -180,6 +225,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/jquery.nicescroll.js"></script>
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot-chart/excanvas.min.js"></script><![endif]-->
     <script src="js/jquery.scrollTo.js"></script>
+    
 </body>
 </html>
 
